# email-audit-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
core/: email_parser.py  enums.py  types.py
data/: email_with_image_attachment.eml  email_without_image_attachment.eml  non_employee_reply_email.eml
ruleengine/: engine.py  rule_base.py
ruleengine/rules/: clarity_rule.py  grammar_rule.py  greeting_rule.py  tone_rule.py
